Modified background and border of completed tasks
* When a task is completed, its background color is now transparent and
  its border is now nonexistent.

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -3,7 +3,13 @@
     --border: 3px solid;
 }
 
+.task {
+    background-color: #ffffff;
+}
+
 .task-done {
+    background-color: #ffffff83;
+    border: 0 !important;
     text-decoration: line-through;
 }
 
